--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# MacOS-specific files
+.DS_Store
+
+# PyCharm files/folders
+.idea/
+
+################################
+### GitHub Python .gitignore ###
+################################
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
