Ignore results stored in the Output folder.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # PyCharm files/folders
 .idea/
 
+# Project folders
+Output/
+
 ################################
 ### GitHub Python .gitignore ###
 ################################
